--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
@@ -24,8 +25,7 @@
       "react-app/jest"
     ]
   },
-	"proxy":"https://www.metaweather.com"
-,
+  "proxy": "https://www.metaweather.com/api/location",
   "browserslist": {
     "production": [
       ">0.2%",
