--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.10.6",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -25,7 +27,7 @@
       "react-app/jest"
     ]
   },
-  "proxy": "https://www.metaweather.com/api/location",
+  "proxy": "https://www.metaweather.com",
   "browserslist": {
     "production": [
       ">0.2%",
